moved redundant code from `rescan_documemts` to `report_update` - updated tests and test data

--- a/tests/data/metadata/quantities.yml
+++ b/tests/data/metadata/quantities.yml
@@ -1,5 +1,11 @@
-q1: q1
-q2: q2
+q1:
+  checksum: 0ea8189fb3ed3769817c0884bfadd887
+  file: q1.yml
+q2:
+  checksum: 86f8771630b6b7a71b226a30fbcbdb84
+  file: q2.yml
 q_1: q1
 q_2: q2
-q3: q3
+q3:
+  checksum: 7ed085e2014675f3b5c8b8487388217f
+  file: category\q3.yml
